k8s/tekton-pipelines/webhook.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: infra-cd
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx-external
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    cert-manager.io/acme-challenge-type: http01
spec:
  tls:
  - hosts:
    - infra-updater.sandbox.11fs-structs.com
    secretName: infra-cd-tls
  rules:
  - host: infra-updater.sandbox.11fs-structs.com
    http:
      paths:
      - path: /
        backend:
          serviceName: el-infra-cd
          servicePort: 8080
